# l2jikarus-voice-mod

./: .gitignore  INSTALL.md  README.md
Client/: CMakeLists.txt  VoiceProxy.cpp  dllmain.cpp  voice_config.ini
Server/: VoiceChatManager.java  VoiceCommand.java
VoiceServer/: server.js
